--- a/code/eda-code/eda_MADAprojectcode.qmd
+++ b/code/eda-code/eda_MADAprojectcode.qmd
@@ -188,38 +188,11 @@ summary_table %>%
 
 
 
+
+
+
 ```{r}
-# Load required packages
-library(dplyr)
-library(gtsummary)
-
-# Select relevant variables for malaria episodes and birth outcomes
-malaria_outcomes_table <- PROMO_Data %>%
-  select(study_arm, 
-         total_malaria_episodes_during_pregnancy, 
-         placental_malaria, 
-         preterm_birth_ontoneo, 
-         stillbirth, 
-         infant_low_birth_weight_2500_g) %>%
-  tbl_summary(
-    by = study_arm,  # Compare DP vs. SP
-    statistic = list(
-      total_malaria_episodes_during_pregnancy ~ "{mean} ± {sd}",
-      all_categorical() ~ "{n} ({p}%)"
-    ),
-    label = list(
-      total_malaria_episodes_during_pregnancy ~ "Total Malaria Episodes (Mean ± SD)",
-      placental_malaria ~ "Placental Malaria (Histology)",
-      preterm_birth_ontoneo ~ "Preterm Birth",
-      stillbirth ~ "Stillbirth",
-      infant_low_birth_weight_2500_g ~ "Low Birth Weight (<2500g)"
-    )
-  ) %>%
-  add_p() %>%
-  bold_labels()
-
-# Print the formatted table
-malaria_outcomes_table
+colnames(PROMO_Data)
 
 ```
 
@@ -228,22 +201,108 @@ malaria_outcomes_table
 
 
 
-*Categorical Characteristics by Study Arm*
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ```{r}
-# Generate a summary table for categorical characteristics
-categorical_table <- PROMO_Data %>%
-  select(study_arm, stillbirth, neonatal_death, infant_low_birth_weight_2500_g) %>%
-  tbl_summary(by = study_arm, 
-              statistic = list(all_categorical() ~ "{n} ({p}%)"),
-              label = list(stillbirth ~ "Stillbirth",
-                           neonatal_death ~ "Neonatal Death",
-                           infant_low_birth_weight_2500_g ~ "Low Birth Weight")) %>%
-  add_p() %>%
-  bold_labels()
+# Load required libraries
+# Load required libraries
+library(dplyr)
+library(gtsummary)
 
-categorical_table
+# Define malaria outcome variables
+malaria_outcome_vars <- c(
+  "total_malaria_episodes_during_pregnancy",
+  "placental_malaria",
+  "preterm_birth_ontoneo",
+  "stillbirth",
+  "infant_low_birth_weight_2500_g"
+)
 
+# Ensure that `study_arm` is in the dataset
+if (!"study_arm" %in% colnames(PROMO_Data)) {
+  stop("⚠️ Error: `study_arm` column not found in PROMO_Data. Please check column names.")
+}
+
+# Remove `stillbirth` and any other variable that has only one level
+valid_outcomes <- malaria_outcome_vars[sapply(PROMO_Data[malaria_outcome_vars], function(x) length(unique(na.omit(x))) > 1)]
+
+# Ensure `study_arm` is included in the selected variables
+valid_outcomes <- c(valid_outcomes, "study_arm")
+
+# Define label mappings dynamically based on valid variables
+all_labels <- list(
+  total_malaria_episodes_during_pregnancy ~ "Total Malaria Episodes (Mean ± SD)",
+  placental_malaria ~ "Placental Malaria (Histology)",
+  preterm_birth_ontoneo ~ "Preterm Birth",
+  stillbirth ~ "Stillbirth",
+  infant_low_birth_weight_2500_g ~ "Low Birth Weight (<2500g)"
+)
+
+dynamic_labels <- all_labels[names(all_labels) %in% valid_outcomes]
+
+# Define a custom function to format p-values
+format_pvalue <- function(pvals) {
+  sapply(pvals, function(x) {
+    if (is.na(x)) {
+      return("NA")  # Handle missing values properly
+    } else if (is.numeric(x)) {
+      if (x < 0.001) {
+        return("< 0.001")  # Report very small values as "< 0.001"
+      } else if (x < 0.01) {
+        return(format(round(x, 3), nsmall = 3))  # Report between 0.001 and 0.01 to three decimal places
+      } else {
+        return(format(round(x, 2), nsmall = 2))  # Report >= 0.01 to two decimal places
+      }
+    } else {
+      return("NA")  # Return "NA" for non-numeric values
+    }
+  })
+}
+
+# Generate table with formatted p-values
+if (nrow(PROMO_Data) > 0 && length(valid_outcomes) > 1) {
+  
+  malaria_outcomes_table <- PROMO_Data %>%
+    select(all_of(valid_outcomes)) %>%
+    tbl_summary(
+      by = "study_arm",
+      statistic = list(
+        total_malaria_episodes_during_pregnancy ~ "{mean} ± {sd}",
+        all_categorical() ~ "{n} ({p}%)"
+      ),
+      label = dynamic_labels
+    ) %>%
+    add_p(
+      test = list(
+        all_categorical() ~ "fisher.test",
+        all_continuous() ~ "t.test"
+      ),
+      pvalue_fun = format_pvalue  # Apply the fixed p-value formatting function
+    )
+  
+  # Print the updated table
+  print(malaria_outcomes_table)
+
+} else {
+  message("⚠️ No data available for analysis or insufficient variability in variables.")
+}
 ```
 
 
@@ -257,11 +316,74 @@ categorical_table
 
 ```{r}
 ggplot(PROMO_Data, aes(x = total_malaria_episodes_during_pregnancy)) +
-  geom_histogram(binwidth = 1, fill = "blue", color = "black", alpha = 0.7) +
-  labs(title = "Distribution of Malaria Episodes", x = "Malaria Episodes", y = "Count") +
+  geom_histogram(binwidth = 1, fill = "light blue", color = "black", alpha = 0.7) +
+  labs(title = "Distribution of Malaria Episodes During Pregnancy", 
+       x = "Number of Malaria Episodes", 
+       y = "Frequency") +
+  theme_minimal()
+
+
+```
+
+
+
+
+*Histogram of Gestational Age at Delivery*
+```{r}
+ggplot(PROMO_Data, aes(x = gestational_age_at_delivery_weeks)) +
+  geom_histogram(binwidth = 1, fill = "light blue", color = "black", alpha = 0.7) +
+  labs(title = "Distribution of Gestational Age at Delivery", 
+       x = "Gestational Age (weeks)", 
+       y = "Number of Births") +
   theme_minimal()
 
 ```
+
+
+
+
+*Histogram of Infant Birth Weight*
+```{r}
+ggplot(PROMO_Data, aes(x = infant_birth_weight_kg)) +
+  geom_histogram(binwidth = 0.2, fill = "green", color = "black", alpha = 0.7) +
+  labs(title = "Distribution of Infant Birth Weights", 
+       x = "Birth Weight (kg)", 
+       y = "Number of Infants") +
+  theme_minimal()
+
+```
+
+
+
+
+*Histogram of Maternal Age*
+```{r}
+ggplot(PROMO_Data, aes(x = age_at_enrollment_years)) +
+  geom_histogram(binwidth = 2, fill = "light blue", color = "black", alpha = 0.7) +
+  labs(title = "Distribution of Maternal Age at Enrollment", 
+       x = "Maternal Age (years)", 
+       y = "Number of Participants") +
+  theme_minimal()
+
+```
+
+
+
+
+*Histogram of Malaria Episodes Stratified by Treatment Regimen (SP vs DP)*
+```{r}
+ggplot(PROMO_Data, aes(x = total_malaria_episodes_during_pregnancy, fill = study_arm)) +
+  geom_histogram(binwidth = 1, color = "black", alpha = 0.7, position = "identity") +
+  facet_wrap(~ study_arm) +
+  labs(title = "Malaria Episodes Stratified by Treatment Regimen", 
+       x = "Number of Malaria Episodes", 
+       y = "Frequency") +
+  theme_minimal()
+
+```
+
+
+
 
 
 
