--- a/products/manuscript/Manuscript.qmd
+++ b/products/manuscript/Manuscript.qmd
@@ -37,12 +37,108 @@ library(survminer)        # Survival plots
 ```
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.show="hold"}
-# Define the correct file path using the `here` package
-data_path <- here("data", "raw-data", "PROMO_Data.csv")
 
-# Read the CSV file, suppressing messages
-PROMO_Data <- read_csv(data_path, show_col_types = FALSE)
+
+# Load necessary packages
+library(dplyr)
+library(readr)
+library(janitor)
+library(tidyr)
+library(here)
+library(knitr)  # For table output
+
+# ✅ Define the correct file path using `here` package
+PROMO_Data <- read_csv(here("data", "raw-data", "PROMO_Data.csv"), show_col_types = FALSE)
+
+# ✅ Clean Column Names
+PROMO_Data <- PROMO_Data %>%
+  clean_names()  # Standardizes column names (lowercase, removes spaces/special characters)
+
+# ✅ Handle Missing Values
+PROMO_Data <- PROMO_Data %>%
+  mutate(across(where(is.numeric), ~ ifelse(is.na(.), median(., na.rm = TRUE), .))) %>%  # Replace NA in numeric columns with median
+  mutate(across(where(is.character), ~ replace_na(., "Unknown")))  # Replace NA in categorical columns with "Unknown"
+
+# ✅ Convert Data Types
+PROMO_Data <- PROMO_Data %>%
+  mutate(across(c(study_arm, delivery_mode, education_level), as.factor)) %>% # Convert categorical columns to factors
+  mutate(across(contains("date"), as.Date, format="%Y-%m-%d"))  # Convert date columns
+
+# ✅ Rename Key Variables for Clarity
+PROMO_Data <- PROMO_Data %>%
+  rename(
+    `Study Arm` = study_arm,
+    `Gestational Age at Enrollment (Weeks)` = gestational_age_at_enrollment_weeks,
+    `Gestational Age at Delivery (Weeks)` = gestational_age_at_delivery,
+    `Education Level` = education_level,
+    `Detection of Malaria Parasites by Microscopy` = proportion_of_plasmodium_positive_blood_smears_during_pregnancy_by_microscopy,
+    `Detection of Malaria Parasites by Microscopy or qPCR` = total_plasmodium_positive_routine_blood_smears_during_pregnancy
+  )
+
+# ✅ Remove Duplicate Rows
+PROMO_Data_Cleaned <- PROMO_Data %>%
+  distinct()  # Removes exact duplicate rows
+
+# ✅ Standardize Categorical Variables with Proper Ordering
+PROMO_Data_Cleaned <- PROMO_Data_Cleaned %>%
+  mutate(
+    # Age Categories
+    Age_Category = factor(case_when(
+      age_at_enrollment_years < 18 ~ "<18",
+      age_at_enrollment_years >= 18 & age_at_enrollment_years <= 35 ~ "18–35",
+      age_at_enrollment_years >= 36 & age_at_enrollment_years <= 55 ~ "36–55",
+      age_at_enrollment_years > 55 ~ ">55",
+      TRUE ~ "Unknown"
+    ), levels = c("<18", "18–35", "36–55", ">55", "Unknown")),
+
+    # Education Level Categories (With "Unknown" at the End)
+    `Education Level` = factor(case_when(
+      `Education Level` %in% c("A level", "O level", "None") ~ "Secondary/No Formal Education",
+      `Education Level` == "Primary" ~ "Primary",
+      `Education Level` %in% c("Tertiary", "University") ~ "Tertiary/Higher Education",
+      is.na(`Education Level`) ~ "Unknown",
+      TRUE ~ "Unknown"
+    ), levels = c("Primary", "Secondary/No Formal Education", "Tertiary/Higher Education", "Unknown")),
+
+    # Gravidity (Number of Pregnancies) with Proper Ordering
+    Gravidity = factor(case_when(
+      gravidity == 1 ~ "1",
+      gravidity == 2 ~ "2",
+      gravidity >= 3 ~ "≥3",
+      is.na(gravidity) ~ "Unknown",
+      TRUE ~ "Unknown"
+    ), levels = c("1", "2", "≥3", "Unknown")),
+
+    # Parity (Number of Births) with Proper Ordering
+    Parity = factor(case_when(
+      parity == 1 ~ "1",
+      parity == 2 ~ "2",
+      parity >= 3 ~ "≥3",
+      is.na(parity) ~ "Unknown",
+      TRUE ~ "Unknown"
+    ), levels = c("1", "2", "≥3", "Unknown"))
+  )
+
+# ✅ Create a Summary Table
+summary_table <- PROMO_Data_Cleaned %>%
+  summarise(
+    `Total Participants` = n(),
+    `Median Age` = median(age_at_enrollment_years, na.rm = TRUE),
+    `Median Gestational Age at Enrollment` = median(`Gestational Age at Enrollment (Weeks)`, na.rm = TRUE),
+    `Median Gestational Age at Delivery` = median(`Gestational Age at Delivery (Weeks)`, na.rm = TRUE)
+  )
+
+
+
 ```
+
+
+
+
+
+
+
+
 
 **Authors**
 
@@ -68,7 +164,9 @@ $\dagger$ Disclaimer: The opinions expressed in this article are the author's ow
 
 ## General Background Information
 
-Malaria is a life-threatening disease caused by Plasmodium parasites, which are transmitted to humans through the bite of an infected female Anopheles mosquito (Talapko et al., 2019). According to the World Health Organization, in 2022, approximately 249 million malaria cases were reported across 85 endemic countries—an increase of 5 million cases compared to 2021. Notably, Uganda alone contributed more than 597,000 cases during that period (WHO, 2023). Despite significant efforts in prevention and treatment, malaria remains a major global health challenge. Vulnerable groups such as pregnant women, children, and immunocompromised individuals are at the highest risk, and Africa continues to bear the heaviest burden of this disease. Pregnant women with malaria tend to experience more severe clinical symptoms and poorer outcomes, including heightened risks of miscarriage, fetal loss, premature birth, low birth weight in newborns, and neonatal death (Caroline Lin Lin Chua et al., 2021). A multifaceted approach incorporating insecticide-treated bed nets (ITNs) and chemoprevention strategies has proven effective in mitigating the adverse health outcomes associated with malaria during pregnancy. Despite this progress, a 2017 report reveals that only 22% of pregnant women in Sub-Saharan Africa received an entire course of IPTp (Bauserman et al., 2019), underscoring a significant disparity in treatment access. Addressing this issue, the study seeks to: (a) examine the association between the frequency of malaria episodes during pregnancy and adverse birth outcomes, such as preterm birth and stillbirth; (b) assess whether infants born to mothers treated with DP are less likely to experience low birth weight compared to those treated with SP; and (c) explore the relationship between placental malaria and adverse birth outcomes, including preterm birth and low birth weight.
+Malaria is a life-threatening disease caused by Plasmodium parasites, which are transmitted to humans through the bite of an infected female Anopheles mosquito (Talapko et al., 2019). According to the World Health Organization, in 2022, approximately 249 million malaria cases were reported across 85 endemic countries—an increase of 5 million cases compared to 2021. Notably, Uganda alone contributed more than 597,000 cases during that period (WHO, 2023). Despite significant efforts in prevention and treatment, malaria remains a major global health challenge.
+
+Vulnerable groups such as pregnant women, children, and immunocompromised individuals are at the highest risk, and Africa continues to bear the heaviest burden of this disease. Pregnant women with malaria tend to experience more severe clinical symptoms and poorer outcomes, including heightened risks of miscarriage, fetal loss, premature birth, low birth weight in newborns, and neonatal death (Caroline Lin Lin Chua et al., 2021). A multifaceted approach incorporating insecticide-treated bed nets (ITNs) and chemoprevention strategies has proven effective in mitigating the adverse health outcomes associated with malaria during pregnancy. Despite this progress, a 2017 report reveals that only 22% of pregnant women in Sub-Saharan Africa received an entire course of IPTp (Bauserman et al., 2019), underscoring a significant disparity in treatment access. Addressing this issue, the study seeks to: (a) examine the association between the frequency of malaria episodes during pregnancy and adverse birth outcomes, such as preterm birth and stillbirth; (b) assess whether infants born to mothers treated with DP are less likely to experience low birth weight compared to those treated with SP; and (c) explore the relationship between placental malaria and adverse birth outcomes, including preterm birth and low birth weight.
 
 ## Description of data and data source
 
@@ -124,184 +222,169 @@ This section will assess whether placental malaria is associated with preterm bi
 
 # Results
 
+Table 1: Baseline Characteristics and Pregnancy Outcomes of Pregnant Women
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.show="hold"}
-# Data Import & Initial Inspection 
 
-# Read the dataset
+# Load Required Packages
+library(dplyr)
+library(gtsummary)
+library(janitor)
+library(here)
+library(knitr)
+
+# ✅ Load Dataset (Ensure Correct File Path)
 PROMO_Data <- read_csv(here("data", "raw-data", "PROMO_Data.csv"), show_col_types = FALSE)
-```
 
-
-
-
-
-
-
-
-
-
-
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.show="hold"}
-#  Data Cleaning & Transformation
-
-# Load required libraries (if not already loaded)
-library(janitor)   # For clean_names()
-
-# Clean Column Names
-PROMO_Data <- PROMO_Data %>% clean_names()
-
-# Remove Empty Rows
+# ✅ Clean Column Names
 PROMO_Data <- PROMO_Data %>%
-  filter(!is.na(study_arm), !is.na(stillbirth), !is.na(neonatal_death), !is.na(infant_low_birth_weight_2500_g))
+  clean_names()  # Standardizes names (lowercase, removes spaces/special characters)
 
-#  Handle Missing Values
+# ✅ Handle Missing Values & Convert Data Types
 PROMO_Data <- PROMO_Data %>%
-  replace_na(list(
-    study_arm = "Unknown",
-    stillbirth = "Unknown",
-    neonatal_death = "Unknown",
-    placental_malaria = "Unknown",
-    delivery_mode = "Unknown"
-  )) %>%
-  mutate(across(where(is.numeric), ~ ifelse(is.na(.), median(., na.rm = TRUE), .)))
+  mutate(across(where(is.numeric), ~ ifelse(is.na(.), median(., na.rm = TRUE), .))) %>%
+  mutate(across(where(is.character), ~ replace_na(., "Unknown"))) %>%
+  mutate(across(c(study_arm, delivery_mode, education_level), as.factor)) %>%
+  mutate(across(contains("date"), as.Date, format="%Y-%m-%d")) 
 
-#  Convert Data Types
+# ✅ Rename Key Variables for Clarity
 PROMO_Data <- PROMO_Data %>%
-  mutate(across(c(study_arm, stillbirth, neonatal_death, placental_malaria, delivery_mode), as.factor)) %>%
-  mutate(across(contains("date"), as.Date, format="%Y-%m-%d"))
+  rename(
+    `Study Arm` = study_arm,
+    `Gestational Age at Enrollment (Weeks)` = gestational_age_at_enrollment_weeks,
+    `Gestational Age at Delivery (Weeks)` = gestational_age_at_delivery,
+    `Education Level` = education_level,
+    `Placental Malaria` = placental_malaria,
+    `Total Malaria Episodes During Pregnancy` = total_malaria_episodes_during_pregnancy
+  )
 
+# ✅ Remove Duplicate Rows
+PROMO_Data_Cleaned <- PROMO_Data %>% distinct()
 
-# Frequency counts of key categorical variables
-# Store counts in variables without printing
-study_arm_counts <- PROMO_Data %>% count(study_arm, sort = TRUE)
-placental_malaria_counts <- PROMO_Data %>% count(placental_malaria, sort = TRUE)
-preterm_birth_counts <- PROMO_Data %>% count(preterm_birth_ontoneo, sort = TRUE)
+# ✅ Standardize Categorical Variables (Ensuring "Unknown" Last)
+PROMO_Data_Cleaned <- PROMO_Data_Cleaned %>%
+  mutate(
+    # ✅ Age Category (Ensure Correct Order)
+    Age_Category = factor(case_when(
+      age_at_enrollment_years < 18 ~ "<18",
+      age_at_enrollment_years >= 18 & age_at_enrollment_years <= 35 ~ "18–35",
+      age_at_enrollment_years >= 36 & age_at_enrollment_years <= 55 ~ "36–55",
+      age_at_enrollment_years > 55 ~ ">55 (Older Adults)",
+      TRUE ~ "Unknown"
+    ), levels = c("<18", "18–35", "36–55", ">55 (Older Adults)", "Unknown")),
 
+    # ✅ Education Level (Ensure "Unknown" is Last)
+    `Education Level` = factor(case_when(
+      `Education Level` %in% c("A level", "O level", "None") ~ "Secondary/No Formal Education",
+      `Education Level` == "Primary" ~ "Primary",
+      `Education Level` %in% c("Tertiary", "University") ~ "Tertiary/Higher Education",
+      is.na(`Education Level`) ~ "Unknown",
+      TRUE ~ "Unknown"
+    ), levels = c("Primary", "Secondary/No Formal Education", "Tertiary/Higher Education", "Unknown")),
 
+    # ✅ Gravidity (Ensure "Unknown" is Last)
+    Gravidity = factor(case_when(
+      gravidity == 1 ~ "1",
+      gravidity == 2 ~ "2",
+      gravidity >= 3 ~ "≥3",
+      is.na(gravidity) ~ "Unknown",
+      TRUE ~ "Unknown"
+    ), levels = c("1", "2", "≥3", "Unknown")),
 
-```
+    # ✅ Parity (Ensure "Unknown" is Last)
+    Parity = factor(case_when(
+      parity == 1 ~ "1",
+      parity == 2 ~ "2",
+      parity >= 3 ~ "≥3",
+      is.na(parity) ~ "Unknown",
+      TRUE ~ "Unknown"
+    ), levels = c("1", "2", "≥3", "Unknown"))
+  )
 
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.show="hold"}
-# Load required libraries
-library(dplyr)
-library(gtsummary)
+# ✅ Define Baseline Characteristics Variables (Reorganized for Logical Flow)
+baseline_vars <- c(
+  # **Maternal Information First**
+  "Age_Category", 
+  "Education Level",
+  "Gravidity", 
+  "Parity", 
+  "Placental Malaria", 
+  "Total Malaria Episodes During Pregnancy", 
+  "delivery_mode",
 
-# Select key baseline variables (ensure they exist)
-baseline_vars <- c("study_arm", "education_level_omrse", "gravidity", "parity", 
-                   "placental_malaria", "preterm_birth_ontoneo", "stillbirth", 
-                   "neonatal_death", "infant_low_birth_weight_2500_g")
+  # **Pregnancy Outcomes**
+  "preterm_birth", 
+  "small_for_gestational_age", 
+  "spontaneous_abortion", 
+  "stillbirth", 
+  "neonatal_death",
 
-# Ensure only existing variables are used
-baseline_vars <- intersect(baseline_vars, colnames(PROMO_Data))
-
-# Generate table only if dataset has rows
-if (nrow(PROMO_Data) > 0 && length(baseline_vars) > 1) {
-  
-  baseline_characteristics <- PROMO_Data %>%
-    select(all_of(baseline_vars)) %>%
-    tbl_summary(
-      by = study_arm,
-      statistic = list(all_categorical() ~ "{n} ({p}%)", all_continuous() ~ "{mean} ± {sd}")
-    ) %>%
-    add_p() %>%
-    modify_header(label = "**Variable**") %>%
-    bold_labels()
-  
-  # REMOVE print() → Directly output the table
-  baseline_characteristics
-
-} else {
-  cat("⚠️ No data available for analysis.")
-}
-
-
-```
-
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.show="hold"}
-
-# Load required libraries
-library(dplyr)
-library(gtsummary)
-
-# Define malaria outcome variables
-malaria_outcome_vars <- c(
-  "total_malaria_episodes_during_pregnancy",
-  "placental_malaria",
-  "preterm_birth_ontoneo",
-  "stillbirth",
-  "infant_low_birth_weight_2500_g"
+  # **Infant Information**
+  "infant_low_birth_weight_2500_g", 
+  "infant_sex6"
 )
 
-# Ensure that `study_arm` is in the dataset
-if (!"study_arm" %in% colnames(PROMO_Data)) {
-  stop("⚠️ Error: `study_arm` column not found in PROMO_Data. Please check column names.")
-}
+# ✅ Ensure Selected Variables Exist in Dataset
+baseline_vars <- baseline_vars[baseline_vars %in% colnames(PROMO_Data_Cleaned)]
 
-# Remove `stillbirth` and any other variable that has only one level
-valid_outcomes <- malaria_outcome_vars[sapply(PROMO_Data[malaria_outcome_vars], function(x) length(unique(na.omit(x))) > 1)]
+# ✅ Generate Baseline Characteristics Table
+baseline_table <- PROMO_Data_Cleaned %>%
+  select(all_of(baseline_vars), `Study Arm`) %>%
+  tbl_summary(
+    by = `Study Arm`,
+    statistic = all_categorical() ~ "{n} ({p}%)",
+    missing = "no"
+  ) %>%
+  modify_header(label = "Characteristics") %>%
+  bold_labels()
 
-# Ensure `study_arm` is included in the selected variables
-valid_outcomes <- c(valid_outcomes, "study_arm")
+# ✅ Display the Table for Quarto Word Output
+baseline_table
 
-# Define label mappings dynamically based on valid variables
-all_labels <- list(
-  total_malaria_episodes_during_pregnancy ~ "Total Malaria Episodes (Mean ± SD)",
-  placental_malaria ~ "Placental Malaria (Histology)",
-  preterm_birth_ontoneo ~ "Preterm Birth",
-  stillbirth ~ "Stillbirth",
-  infant_low_birth_weight_2500_g ~ "Low Birth Weight (<2500g)"
-)
-
-dynamic_labels <- all_labels[names(all_labels) %in% valid_outcomes]
-
-# Define a custom function to format p-values
-format_pvalue <- function(pvals) {
-  sapply(pvals, function(x) {
-    if (is.na(x)) {
-      return("NA")  # Handle missing values properly
-    } else if (is.numeric(x)) {
-      if (x < 0.001) {
-        return("< 0.001")  # Report very small values as "< 0.001"
-      } else if (x < 0.01) {
-        return(format(round(x, 3), nsmall = 3))  # Report between 0.001 and 0.01 to three decimal places
-      } else {
-        return(format(round(x, 2), nsmall = 2))  # Report >= 0.01 to two decimal places
-      }
-    } else {
-      return("NA")  # Return "NA" for non-numeric values
-    }
-  })
-}
-
-# Generate table with formatted p-values
-if (nrow(PROMO_Data) > 0 && length(valid_outcomes) > 1) {
-  
-  malaria_outcomes_table <- PROMO_Data %>%
-    select(all_of(valid_outcomes)) %>%
-    tbl_summary(
-      by = "study_arm",
-      statistic = list(
-        total_malaria_episodes_during_pregnancy ~ "{mean} ± {sd}",
-        all_categorical() ~ "{n} ({p}%)"
-      ),
-      label = dynamic_labels
-    ) %>%
-    add_p(
-      test = list(
-        all_categorical() ~ "fisher.test",
-        all_continuous() ~ "t.test"
-      ),
-      pvalue_fun = format_pvalue  # Apply the fixed p-value formatting function
-    )
-
-  # REMOVE print() → Just place the table here
-  malaria_outcomes_table
-
-} else {
-  cat("⚠️ No data available for analysis or insufficient variability in variables.")
-}
 
 ```
+
+
+
+
+
+Figure 1. Distribution of Adverse Pregnancy Outcomes by Study Arm
+```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.show="hold"}
+# Load required packages
+library(ggplot2)
+library(dplyr)
+library(tidyr)
+
+# Ensure correct column name for Study Arm
+study_arm_col <- "Study Arm"
+
+# Define pregnancy outcomes
+pregnancy_outcomes <- c("preterm_birth", "stillbirth", "neonatal_death")
+
+# ✅ Reshape data for plotting
+pregnancy_data <- PROMO_Data_Cleaned %>%
+  select(all_of(study_arm_col), all_of(pregnancy_outcomes)) %>%
+  pivot_longer(cols = all_of(pregnancy_outcomes), names_to = "Outcome", values_to = "Present") %>%
+  filter(!is.na(Present)) %>%  # Remove missing values
+  group_by(`Study Arm`, Outcome, Present) %>%
+  summarise(Total = n(), .groups = "drop")
+
+# ✅ Convert outcome values to categorical (if numeric)
+pregnancy_data$Present <- factor(pregnancy_data$Present, levels = c(0, 1), labels = c("Absent", "Present"))
+
+# ✅ Plot Pregnancy Outcomes by Study Arm
+ggplot(pregnancy_data, aes(x = Outcome, y = Total, fill = `Study Arm`)) +
+  geom_bar(stat = "identity", position = "dodge") +
+  labs(title = "Pregnancy Outcomes",
+       x = "Pregnancy Outcome",
+       y = "Total Count",
+       fill = "Study Arm") +
+  theme_minimal() +
+  scale_fill_manual(values = c("lightblue", "pink")) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) 
+
+```
+
+
 
 ## Exploratory/Descriptive analysis
 
